# lcdmirror

./: INTERNALS.md  README.md  straddle.yaml
browser/: package.json
browser/src/modules/: lcdmirror.ts
browser/src/panels/: LcdMirrorWindow.vue
esp-idf/: CMakeLists.txt  idf_component.yml
esp-idf/include/: lcdmirror.h
esp-idf/src/: lcdmirror.cpp
